@@ -1,5 +1,6 @@
 1.3.90 (1.4.0 rc1):
 -Add: TTA Enc plugin
+-Add: sad (Black & White audio file) support
 
 1.3.3:
 -Change: Piping is disabled by default, it can be activated in the config dialog though
